@@ -1,3 +1,5 @@
+* Make fuse.Object.clone() work with Array, Boolean, Number, RegExp, and String objects. [jddalton]
+
 * Make the event object passed to delegate() masquerade as that of the matched element and add getDelegator() to the event object. [jddalton]
 
 * Remove fuse.$break and allow returning false to exit out of an iteration method. [jddalton]
